fix: set height to fit content on mobile version

--- a/src/styles/_responsiveness.scss
+++ b/src/styles/_responsiveness.scss
@@ -22,6 +22,7 @@
         }
     }
     #home {
+        height: fit-content;
         margin-top: 25px;
         .container {
             flex-direction: column-reverse;
@@ -33,7 +34,7 @@
             width: 100% !important;
             border-radius: 50%;
             padding-bottom: 50px;
-            padding-top: 100px;
+            padding-top: 50px;
         }
     }
     #experience {
